sub/NNO-12342 Добавил поддержку className/style